# zinq

./: Cargo.toml  README.md  TODO.md
configx/: Cargo.toml  README.md
configx-macros/: Cargo.toml  README.md
configx-macros/src/: lib.rs
configx-macros/src/render/: mod.rs  struct_derive.rs
configx/src/: error.rs  get.rs  item.rs  key.rs  lib.rs  meta.rs  path.rs  section.rs
configx/src/item/: mod.rs  section.rs  value.rs
configx/src/path/: iter.rs  mod.rs
configx/src/types/: map.rs  mod.rs
configx/tests/: mod.rs  struct.rs
errorx/: Cargo.toml  README.md
errorx-macros/: Cargo.toml  README.md
errorx-macros/src/variant/: to_error.rs
errorx-macros/tests/: custom_name.rs  mod.rs
errorx/src/: lib.rs
errorx/tests/: custom_code.rs  custom_message.rs
extendx/: Cargo.toml  README.md
extendx/src/: lib.rs
extendx/src/elements/: struct_extend.rs
extendx/src/render/: struct_derive.rs
extendx/tests/: struct.rs
macrox/: Cargo.toml  README.md
macrox/src/: element.rs  error.rs  lazy_parse.rs  lib.rs  syntax.rs
macrox/src/contexts/: enum_context.rs  mod.rs  struct_context.rs
macrox/src/ext/: attrs.rs  ident.rs  mod.rs  path.rs
macrox/src/registry/: mod.rs
macrox/src/state/: id.rs  mod.rs
reflectx/: Cargo.toml  README.md  TODO.md
reflectx/src/: field.rs  get.rs  impl.rs  layout.rs  lib.rs  method.rs  option.rs  set.rs  type.rs  type_id.rs  value_of.rs  visibility.rs
reflectx/src/bound/: mod.rs
reflectx/src/dynamic/: dyn.rs  mod.rs
reflectx/src/generic/: type.rs
reflectx/src/types/: ref.rs  this.rs  trait.rs
reflectx/src/values/: bool.rs  mod.rs  mutable.rs  str.rs
reflectx/tests/: mod.rs
zinq/: Cargo.toml  README.md
zinq-error/: Cargo.toml  README.md
zinq-error-macros/: Cargo.toml  README.md
zinq-error-macros/src/: enum_params.rs  lib.rs  params.rs  reflect_enum.rs  template.rs  variant_params.rs
zinq-error-macros/src/variant/: display.rs  error.rs  mod.rs  to_error.rs
zinq-error-macros/tests/: custom_code.rs  custom_message.rs  custom_name.rs  mod.rs
zinq-error/src/: any.rs  attribute.rs  bad_request.rs  builder.rs  category.rs  code.rs  error.rs  error_group.rs  lib.rs  list.rs  not_found.rs  text.rs  to_error.rs
zinq-extend/: Cargo.toml  README.md
zinq-extend/src/: input.rs  lib.rs  struct.rs  type_entry.rs
zinq-extend/src/elements/: mod.rs  struct_extend.rs
zinq-extend/src/types/: struct.rs
zinq-extend/tests/: struct.rs
zinq-macros/: Cargo.toml  README.md
zinq-parse-macros/: Cargo.toml  README.md
zinq-parse-macros/src/: lib.rs
zinq-parse-macros/src/parse/: derive_input.rs  input.rs  input_argument.rs  mod.rs
zinq-parse-macros/src/render/: element.rs  mod.rs
zinq-parse-macros/tests/: mod.rs
zinq-query/: Cargo.toml  README.md
zinq-query/src/: lib.rs  resolve.rs
zinq-query/src/context/: field.rs  mod.rs
zinq-query/src/error/: mod.rs  parse.rs  query.rs
zinq-query/src/parse/: mod.rs  position.rs
zinq-query/src/result/: failure.rs  mod.rs  success.rs
zinq-reflect/: Cargo.toml  README.md  TODO.md
zinq-reflect-macros/: Cargo.toml  README.md
zinq-reflect-macros/src/: lib.rs  reflect_enum.rs  reflect_field.rs  reflect_generics.rs  reflect_impl.rs  reflect_meta.rs  reflect_method.rs  reflect_mod.rs  reflect_struct.rs  reflect_trait.rs  reflect_visibility.rs
zinq-reflect-macros/src/parse/: meta_data.rs
zinq-reflect-macros/tests/: attr.rs  derive.rs  map_tests.rs  mod.rs  seq_tests.rs  struct_tests.rs  trait_tests.rs
zinq-reflect/src/: _enum.rs  _impl.rs  _mod.rs  _mut.rs  _self.rs  _struct.rs  _trait.rs  _type.rs  any.rs  bool.rs  box.rs  dynamic.rs  field.rs  fields.rs  get.rs  item.rs  lib.rs  map.rs  meta_data.rs  method.rs  module.rs  object.rs  param.rs  path.rs  ptr.rs  result.rs  sequence.rs  set.rs  string.rs  ty.rs  type_id.rs  type_of.rs  type_ptr.rs  value.rs  value_of.rs  variant.rs  visibility.rs
zinq-reflect/src/bound/: _trait.rs
zinq-reflect/src/bounds/: _lifetime.rs  _trait.rs  mod.rs
zinq-reflect/src/collection/: map.rs  mod.rs  seq.rs
zinq-reflect/src/dynamic/: dyn.rs  sequence.rs
zinq-reflect/src/enums/: mod.rs
zinq-reflect/src/error/: path_error.rs
zinq-reflect/src/fields/: field.rs  mod.rs
zinq-reflect/src/generic/: const.rs  lifetime.rs  mod.rs
zinq-reflect/src/generics/: _const.rs  _lifetime.rs  _type.rs  mod.rs
zinq-reflect/src/impl/: method_item.rs  mod.rs
zinq-reflect/src/impls/: mod.rs
zinq-reflect/src/number/: float.rs
zinq-reflect/src/numbers/: float.rs  int.rs  mod.rs
zinq-reflect/src/primitive/: bool.rs  mod.rs  ptr.rs  ref.rs  slice.rs  str.rs  string.rs  tuple.rs
zinq-reflect/src/slice/: sized.rs
zinq-reflect/src/slices/: mod.rs  sized.rs  un_sized.rs
zinq-reflect/src/structs/: mod.rs
zinq-reflect/src/ty/: alias_type.rs  array_type.rs  bool_type.rs  enum_type.rs  float_type.rs  fn_type.rs  int_type.rs  mod.rs  mod_type.rs  ptr_type.rs  string_type.rs  struct_type.rs  tuple_type.rs  uint_type.rs
zinq-reflect/src/types/: _mod.rs  _mut.rs  _self.rs  bool.rs  enum.rs  map.rs  mod.rs  module.rs  slice.rs  str.rs  struct.rs  tuple.rs
zinq-reflect/src/value/: bool_value.rs  float_value.rs  int_value.rs  mod.rs  object_value.rs  ref_value.rs  string_value.rs  tuple_value.rs  uint_value.rs
zinq-reflect/src/values/: map.rs  mod.rs  ref.rs  slice.rs
zinq-runtime/: Cargo.toml  README.md
zinq-runtime/src/mem/: arena.rs  mod.rs
zinq-runtime/src/types/: cell.rs  entry.rs  mod.rs  registry.rs
zinq-schema/: Cargo.toml  README.md
zinq-schema-macros/: Cargo.toml  README.md
zinq-schema-macros/src/: lib.rs
zinq-schema/src/: any.rs  lib.rs  string.rs
zinq-schema/src/error/: basic.rs  field.rs  group.rs  mod.rs
zinq-schema/src/value/: array.rs  mod.rs  number.rs  object.rs
zinq-temple/: Cargo.toml  README.md
zinq-temple/src/: arguments.rs  lib.rs  parameter.rs
zinq-temple/src/error/: mod.rs  (+2 more)
zinq-validate/: Cargo.toml  README.md
zinq-validate-macros/: Cargo.toml  README.md
zinq-validate-macros/src/: lib.rs
zinq-validate/src/: lib.rs
zinq/src/: lib.rs  location.rs  prelude.rs  span.rs  token.rs
(+442 files in other folders)
