[workspace]
resolver = "3"
members = ["zinq", "zinq-macros", "reflectx", "reflectx-macros"]
default-members = ["zinq", "zinq-macros", "reflectx", "reflectx-macros"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/zinq"
homepage = "https://www.github.com/aacebo/zinq"
repository = "https://www.github.com/aacebo/zinq"

[workspace.dependencies]
zinq-macros = { path = "./zinq-macros", version = "0.0.1" }
reflectx = { path = "./reflectx", version = "0.0.1" }
reflectx-macros = { path = "./reflectx-macros", version = "0.0.1" }

serde = { version = "1" }
serde_yml = { version = "0.0.6" }
serde_json = { version = "1" }
syn = { version = "2" }
quote = { version = "1" }
proc-macro2 = { version = "1" }
