[workspace]
resolver = "3"
members = ["zinq"]
default-members = ["zinq"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/zinq"
homepage = "https://www.github.com/aacebo/zinq"
repository = "https://www.github.com/aacebo/zinq"

[workspace.dependencies]
zinq = { path = "./zinq", version = "0.0.1" }
