[workspace]
resolver = "3"
members = ["zinq", "zinq-*"]
default-members = ["zinq", "zinq-*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/zinq"
homepage = "https://www.github.com/aacebo/zinq"
repository = "https://www.github.com/aacebo/zinq"

[workspace.dependencies]
zinq = { path = "./zinq", version = "0.0.1" }
zinq-syntax = { path = "./zinq-syntax", version = "0.0.1" }
zinq-error = { path = "./zinq-error", version = "0.0.1" }
zinq-token = { path = "./zinq-token", version = "0.0.1" }
zinq-parse = { path = "./zinq-parse", version = "0.0.1" }
zinq-sema = { path = "./zinq-sema", version = "0.0.1" }
zinq-types = { path = "./zinq-types", version = "0.0.1" }