[package]
name = "configx"
description = "types/implementations for building simple configurations"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
macros = ["dep:configx-macros"]
serde = ["dep:serde", "serde/derive"]
yml = ["serde", "dep:serde_yml"]
json = ["serde", "dep:serde_json"]

[dependencies]
configx-macros = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
configx-macros = { workspace = true }