[package]
name = "errorx-macros"
description = "macros for the errorx crate."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[lints.rust]
named_arguments_used_positionally = "allow"

[dependencies]
syn = { workspace = true, features = ["full", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
errorx = { workspace = true }