[package]
name = "errorx"
description = "error and result types/utilities."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
macros = ["dep:errorx-macros"]
serde = ["dep:serde", "serde/derive"]

[lints.rust]
named_arguments_used_positionally = "allow"

[dependencies]
errorx-macros = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
errorx-macros = { workspace = true }