[package]
name = "macrox"
description = "macro type parsing helpers"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
state = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }