[package]
name = "zinq-error"
description = "error and result types/utilities."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
macros = ["dep:zinq-error-macros"]
serde = ["dep:serde", "serde/derive", "zinq-reflect/serde"]

[dependencies]
zinq-reflect = { workspace = true, features = ["macros"] }
zinq-error-macros = { workspace = true, optional = true }
serde = { workspace = true, optional = true }