[package]
name = "zinq-extend"
description = "type and implementation extentions"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }