[package]
name = "zinq-macros"
description = "a comprehensive collection of packages designed to streamline rust development."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }