[package]
name = "zinq-query"
description = "query/resolve zinq schemas."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
macros = ["dep:zinq-query-macros", "zinq-schema/macros"]
serde = ["dep:serde", "serde/derive", "zinq-schema/serde"]

[dependencies]
zinq-schema = { path = "../zinq-schema", version = "*" }
zinq-query-macros = { path = "../zinq-query-macros", version = "*", optional = true }
bytes = { workspace = true }
serde = { workspace = true, optional = true }