[package]
name = "zinq-reflect-macros"
description = "macros for the zinq-reflect crate."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
zinq-reflect = { workspace = true, features = ["macros"] }