[package]
name = "zinq-reflect"
description = "tools for performing value/type reflection with zinq types."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
macros = ["dep:zinq-reflect-macros"]
serde = ["dep:serde", "serde/derive"]

[dependencies]
zinq-reflect-macros = { workspace = true, optional = true }
serde = { workspace = true, optional = true }