[package]
name = "zinq-runtime"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
zinq-hash = { workspace = true }
zinq-error = { workspace = true }
zinq-reflect = { workspace = true }