[package]
name = "zinq-temple"
description = "simple template parsing/rendering."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing"] }