[package]
name = "zinq"
description = "a comprehensive collection of packages designed to streamline rust development."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
macros = ["reflectx/macros", "errorx/macros"]
configx = ["dep:configx"]
reflectx = ["dep:reflectx"]
errorx = ["dep:errorx"]
extendx = ["dep:extendx"]
macrox = ["dep:macrox"]
serde = ["dep:serde", "serde/derive", "reflectx/serde", "errorx/serde"]

[dependencies]
configx = { workspace = true, optional = true }
reflectx = { workspace = true, optional = true }
extendx = { workspace = true, optional = true }
errorx = { workspace = true, optional = true }
macrox = { workspace = true, optional = true }
serde = { workspace = true, optional = true }