[package]
name = "zinq"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
parse = ["dep:zinq-parse"]

[dependencies]
zinq-error = { workspace = true }
zinq-token = { workspace = true }
zinq-parse = { workspace = true, optional = true }